# fashion-trend-segmentation

./: .env.example  .gitignore  README.md  huggingface_api_cloth_seg.ipynb  pyproject.toml
