[project]
name = "requeter-service-ia"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "tqdm>=4.69.0",
]
